name:                xml-arrow
version:             0.3.4.1
description:         Haskell list arrows for XML manipulation.
synopsis:            Haskell list arrows for XML manipulation.
category:            Data, Generics
license:             BSD3
license-file:        LICENSE
author:              Sebastiaan Visser
maintainer:          haskell@fvisser.nl
build-type:          Simple
cabal-version:       >= 1.6

library
  ghc-options:       -Wall
  hs-source-dirs:    src
  exposed-modules:   Text.XML.Light.Arrow
  build-depends:
      base == 4.*
    , arrow-list >= 0.2 && < 0.7
    , containers >= 0.3 && < 0.6
    , xml == 1.3.*
